<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".ui.activities.AddReceivedActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white" />


    <TextView
        android:id="@+id/select_customer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_customer"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/customers_spn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/Received_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/typeOfReceived"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radio_group_Received_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/cash_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash" />

        <RadioButton
            android:id="@+id/check_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/check" />

        <RadioButton
            android:id="@+id/pos_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/pos" />
    </RadioGroup>


    <TextView
        android:id="@+id/amount_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/amount"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/amount_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal" />


    <LinearLayout
        android:id="@+id/check_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/bank_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_bank"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/bank_names_spn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/bank_names"/>

        <TextView
            android:id="@+id/check_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/check_code"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/check_code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_check_code"
            android:inputType="number" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/pos_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tracking_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tracking_code"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/tracking_code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_tracking_code"
            android:inputType="number" />
    </LinearLayout>


    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/purple"
        android:text="@string/submit" />

</LinearLayout>


