<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

    <TextView
        android:id="@+id/customerNameView_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_name" />

    <TextView
        android:id="@+id/customerName_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textDirection="rtl"
        tools:text="فارس داراب" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

    <TextView
        android:id="@+id/typeOfReceivedView_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typeOfReceived" />


    <TextView
        android:id="@+id/typeOfReceived_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        tools:text="وجه نقد" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

    <TextView
        android:id="@+id/amountView_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

    <TextView
        android:id="@+id/amount_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        tools:text="250" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/check_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/bankView_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/bank" />

        <TextView
            android:id="@+id/bank_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textDirection="rtl"
            tools:text="250" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/check_codeView_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/check_code"/>

        <TextView
            android:id="@+id/check_code_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textDirection="rtl"
            tools:text="2507875"/>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/pos_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">


        <TextView
            android:id="@+id/tracking_codeView_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tracking_code" />

        <TextView
            android:id="@+id/tracking_code_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textDirection="rtl"
            tools:text="2507875"/>

        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/break_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/purple" />

</LinearLayout>