<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"
    tools:context=".ui.activities.AddCustomerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white"/>

    <TextView
        android:id="@+id/customerName_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/customer_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/customerName_et"
        android:textStyle="bold" />


            <EditText
                android:id="@+id/customerName_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/shopArea_tv"
                app:layout_constraintTop_toBottomOf="@+id/customerName_tv"
                android:importantForAutofill="no"
                android:inputType="textShortMessage"
                android:maxLines="1"
                />

    <TextView
        android:id="@+id/shopArea_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/shop_area"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customerName_et"
        app:layout_constraintBottom_toTopOf="@id/shopArea_et"
        android:textStyle="bold" />

            <EditText
                android:id="@+id/shopArea_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/phoneNumber_tv"
                app:layout_constraintTop_toBottomOf="@id/customerName_et"
                android:importantForAutofill="no"
                android:inputType="number"
                />

    <TextView
        android:id="@+id/phoneNumber_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/phone_number"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shopArea_et"
        app:layout_constraintBottom_toTopOf="@id/phoneNumber_et"
        android:textStyle="bold" />

            <EditText
                android:id="@+id/phoneNumber_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/phoneNumber_tv"
                android:importantForAutofill="no"
                android:maxLength="11"
                android:inputType="number"
                />


    <Button
        android:id="@+id/locationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:text="@string/set_location"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber_et"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:padding="10dp"/>


    <Button
        android:id="@+id/upload_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/purple"
        android:text="@string/add_customer"
        android:layout_margin="16dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>